Fixed the close button alignment for confirmation pop over

--- a/src/app/authenticated/plans-and-services/my-service-plans/plan-confirmation-popover/plan-confirmation-popover.component.scss
+++ b/src/app/authenticated/plans-and-services/my-service-plans/plan-confirmation-popover/plan-confirmation-popover.component.scss
@@ -18,6 +18,10 @@
       font: bold;
       background-color: green;
       color:white;
+      .close-btn {
+        padding: 10px 10px 10px 10px;
+        color: black;
+      }
     }
   }
   //.control-label {
